# xiaozhi_assistant

./: .gitignore  DISPLAY_DEBUG_README.md  README.md  TOUCH_DEBUG_README.md  build.sh
src/common/: cfg.h  ipc_udp.cc  ipc_udp.h
src/ui_and_ai/: CMakeLists.txt
src/ui_and_ai/src/: ai_base.cc  ai_base.h  anchors_320.cc  anchors_640.cc  face_detection.cc  face_detection.h  face_recognition.cc  face_recognition.h  kws.cc  kws.h  lv_100ask_xz_ai_conf.h  lvgl_ui.cc  lvgl_ui.h  main.cc  message_queue.cc  message_queue.h  scoped_timing.hpp  sensor_buf_manager.cc  sensor_buf_manager.h  text_paint.cc  utils.cc  utils.h  vi_vo.h
src/ui_and_ai/src/lv_100ask_xz_ai/: CMakeLists.txt  library.properties  lv_100ask_xz_ai.h  lv_100ask_xz_ai.mk
src/ui_and_ai/src/lv_100ask_xz_ai/src/: cfg.h  ipc_udp.c  ipc_udp.h  lang_config.h  lv_100ask_xz_ai_main.c  lv_100ask_xz_ai_main.h  ui_system.c  ui_system.h
src/ui_and_ai/src/lvgl/: CMakeLists.txt  lv_conf.h
src/ui_and_ai/src/lvgl/env_support/cmake/: custom.cmake
src/ui_and_ai/src/lvgl/src/display/: lv_display.c
src/ui_and_ai/src/lvgl/src/drivers/display/drm/: lv_linux_drm.c  lv_linux_drm.h
src/ui_and_ai/src/lvgl/src/drivers/evdev/: lv_evdev.c  lv_evdev.h
src/ui_and_ai/src/lvgl/src/drivers/libinput/: lv_libinput.c
src/ui_and_ai/src/lvgl/src/indev/: lv_indev.c
src/ui_and_ai/src/lvgl/src/misc/: lv_event.c
src/ui_and_ai/utils/: face_detection_640.kmodel  kws.kmodel  run.sh  stop.sh
src/ui_and_ai/utils/face_database/: 1.db
src/xiaozhi_client/: CMakeLists.txt  control_center.cc  control_center.h  http.cc  http.h  main.cc  uuid.cc  uuid.h  websocket_client.cc  websocket_client.h
src/xiaozhi_client/snd_core/: acap.cc  acap.h  audio_cfg.h  capture_pcm.cc  capture_pcm.h  play_pcm.cc  play_pcm.h  wake_word_generator.cc  wake_word_generator.h  wakeup_audio.pcm  wakeup_video.pcm  webrtc_audio_enhance.cc  webrtc_audio_enhance.h  webrtc_audio_improvement.cc  webrtc_audio_improvement.h  webttsctrl.cc  webttsctrl.h
